--- a/index.html
+++ b/index.html
@@ -4,10 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Floating Cards</title>
 </head>
 <body>
-    
+    <div class="container">
+
+        <!-- start header section -->
+        <header>
+            <h1>Meet Our Team</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, vero qui nostrum officia quo architecto cum quibusdam voluptate vel, rerum dolorum ullam at, sint laboriosam ex veritatis hic excepturi assumenda?</p>
+        </header>
+
+        <!-- start main section with team box -->
+        <main>
+            <div class="team-box">
+                <div class="clearfix">
+                <img src="./img/male1.png" alt="Marco Bianchi, Designer">
+                    <h3>Marco Bianchi</h3>
+                    <p>Designer</p>
+                    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
+                </div>
+            </div>
+            <div class="team-box">
+                <div class="clearfix">
+                <img src="./img/female1.png" alt="Marco Bianchi, Designer">
+                    <h3>Marco Bianchi</h3>
+                    <p>Designer</p>
+                    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
+                </div>
+            </div>
+            <div class="team-box">
+                <div class="clearfix">
+                <img src="./img/male2.png" alt="Marco Bianchi, Designer">
+                    <h3>Marco Bianchi</h3>
+                    <p>Designer</p>
+                    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
+                </div>
+            </div>
+            <div class="team-box">
+                <div class="clearfix">
+                <img src="./img/female2.png" alt="Marco Bianchi, Designer">
+                    <h3>Marco Bianchi</h3>
+                    <p>Designer</p>
+                    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
+                </div>
+            </div>
+            <div class="team-box">
+                <div class="clearfix">
+                <img src="./img/male3.png" alt="Marco Bianchi, Designer">
+                    <h3>Marco Bianchi</h3>
+                    <p>Designer</p>
+                    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
+                </div>
+            </div>
+            <div class="team-box">
+                <div class="clearfix">
+                <img src="./img/female3.png" alt="Marco Bianchi, Designer">
+                    <h3>Marco Bianchi</h3>
+                    <p>Designer</p>
+                    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
