team name and role

--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
             </div>
             <div class="team-box">
                 <div class="clearfix">
-                <img src="./img/female1.png" alt="Marco Bianchi, Designer">
-                    <h3>Marco Bianchi</h3>
-                    <p>Designer</p>
-                    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
+                <img src="./img/female1.png" alt="Laura Rossi, Front-end Developer">
+                    <h3>Laura Rossi</h3>
+                    <p>Front-end Developer</p>
+                    <p><a href="mailto:laurarossi@team.com">laurarossi@team.com</a></p>
                 </div>
             </div>
             <div class="team-box">
                 <div class="clearfix">
-                <img src="./img/male2.png" alt="Marco Bianchi, Designer">
-                    <h3>Marco Bianchi</h3>
-                    <p>Designer</p>
-                    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
+                <img src="./img/male2.png" alt="Giorgio Verdi, Back-end Developer">
+                    <h3>Giorgio Verdi</h3>
+                    <p>Back-end Developer</p>
+                    <p><a href="mailto:giorgioverdi@team.com">giorgioverdi@team.com</a></p>
                 </div>
             </div>
             <div class="team-box">
                 <div class="clearfix">
-                <img src="./img/female2.png" alt="Marco Bianchi, Designer">
-                    <h3>Marco Bianchi</h3>
-                    <p>Designer</p>
-                    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
+                <img src="./img/female2.png" alt="Marta Ipsum, SEO Specialist">
+                    <h3>Marta Ipsum</h3>
+                    <p>SEO Specialist</p>
+                    <p><a href="mailto:martaipsum@team.com">martaipsum@team.com</a></p>
                 </div>
             </div>
             <div class="team-box">
                 <div class="clearfix">
-                <img src="./img/male3.png" alt="Marco Bianchi, Designer">
-                    <h3>Marco Bianchi</h3>
-                    <p>Designer</p>
-                    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
+                <img src="./img/male3.png" alt="Roberto Lorem, Project Manager">
+                    <h3>Roberto Lorem</h3>
+                    <p>Project Manager</p>
+                    <p><a href="mailto:robertolorem@team.com">robertolorem@team.com</a></p>
                 </div>
             </div>
             <div class="team-box">
                 <div class="clearfix">
-                <img src="./img/female3.png" alt="Marco Bianchi, Designer">
-                    <h3>Marco Bianchi</h3>
-                    <p>Designer</p>
-                    <p><a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a></p>
+                <img src="./img/female3.png" alt="Daniela Amet, Analyst">
+                    <h3>Daniela Amet</h3>
+                    <p>Analyst</p>
+                    <p><a href="mailto:danielaamet@team.com">danieleamet@team.com</a></p>
                 </div>
             </div>
         </main>
